feat: More debug information